# silero-vad

./: Cargo.toml  LICENSE.md  README.md  build.rs  plugin.toml  run.sh
.github/workflows/: release.yml
src/: android_libcxx_streams.cc  lib.rs
