[package]
name = "silero-vad-loadable-plugin"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace so this crate doesn't get pulled into the main
# workspace build (and so the cdylib + heavy ONNX deps don't pollute
# the main `target/` dir for unrelated work).
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# SileroVADNode lives in `remotemedia-core` (gated by the `silero-vad`
# feature). Turning the `loadable-export` feature on flips the
# `#[node]` macro's conditional FFI emission so the inventory contains
# a `LoadableFactoryEntry` for `SileroVADNode`.
#
# `default-features = false` strips the docker, video, multiprocess,
# and loadable (in-process plugin loader) features we'd otherwise
# inherit from core's defaults. This plugin only exposes a single
# in-process audio node; none of those features are reachable
# through `SileroVADNode`, and dropping them shrinks the cdylib by
# pulling in only the minimum codepath.
remotemedia-core = { git = "https://github.com/RemoteMedia-SDK/remotemedia-sdk.git", rev = "c188c25068816abf3954d9b1313713b64be3b0a0", default-features = false, features = ["silero-vad", "loadable-export"] }

# `plugin_export!()` walks the inventory and emits the abi_stable
# root module the host loads via `dlopen`.
remotemedia-plugin-sdk = { git = "https://github.com/RemoteMedia-SDK/remotemedia-sdk.git", rev = "c188c25068816abf3954d9b1313713b64be3b0a0" }

# `abi_stable` must be a direct dep so the attribute macros expanded
# by `plugin_export!()` (`#[sabi_extern_fn]`, `#[export_root_module]`)
# can resolve `::abi_stable` at the crate root.
abi_stable = "0.11"
