[package]
name = "silero-vad-loadable-plugin"
version = "0.4.3"
edition = "2021"
publish = false

# Standalone workspace — fully decoupled from any parent workspace so
# the plugin's `ort` pin and other heavy deps never unify against a
# host workspace's pins.
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[lib]
name = "silero_vad_loadable_plugin"
# cdylib: matrix-built `.so` artifact for dlopen-based loading.
# rlib: lets consumers (e.g. examples/qwen-s2s-avatar-plugins) link
#       this crate as a normal Rust dep and register its factories
#       in-process via `wrap_ffi_factory(...)` — no dlopen, no
#       msgpack roundtrip, identical behavior.
crate-type = ["cdylib", "rlib"]

# Default features include `plugin-export`, which emits the
# `abi_stable` root-module symbol that dlopen-based hosts look up.
# When linking this crate as an rlib alongside other plugins (e.g.
# examples/qwen-s2s-avatar-plugins), the root-module symbol from each
# plugin collides at link time — disable this feature in that case via
# `default-features = false`.
[features]
default = ["plugin-export"]
plugin-export = []

# Path-3 hand-rolled plugin: depends ONLY on the skinny
# `remotemedia-plugin-sdk` umbrella (which re-exports the trait/type
# surfaces). It does NOT link `remotemedia-core` — that's what lets
# the SileroVAD + SpeculativeVADCoordinator nodes (and `ort` itself)
# be removed from the host's core crate without changing this plugin's
# surface area.
[dependencies]
remotemedia-plugin-sdk = { git = "https://github.com/RemoteMedia-SDK/remotemedia-plugin-sdk.git", rev = "48231f29a924b0236878efad666d2b7604bba333" }

# `abi_stable` must be a direct dep so the attribute macros expanded
# by `plugin_export!()` (`#[sabi_extern_fn]`, `#[export_root_module]`)
# can resolve `::abi_stable` at the crate root.
abi_stable = "0.11"

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
tracing = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }

# Pin `ort` directly in this crate. Matches the host workspace's
# `=2.0.0-rc.12` pin for behavioural parity. This crate is its own
# workspace so cargo would not unify against the host either way.
ort = { version = "=2.0.0-rc.12", features = ["half", "download-binaries"] }
